[gd_scene load_steps=31 format=2]

[ext_resource path="res://GameUI/ButtonContextBar/button_context_bar.gd" type="Script" id=1]
[ext_resource path="res://Assets/GameUI/art/controller_buttons.png" type="Texture" id=2]
[ext_resource path="res://GameUI/ButtonContextBar/scenes/ContextOption.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=7]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=8]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 50, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=9]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 50, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=25]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 500.437, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=26]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 650, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=27]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 650, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=1]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=2]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 100, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=3]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 100, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=4]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=5]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 150, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=6]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 150, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=10]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=11]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 200, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=12]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 200, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=13]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 250, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=14]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 250, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=15]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 250, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=19]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=20]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 300, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=21]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 300, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=22]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 350, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=23]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 350, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=24]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 350, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=16]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=17]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 0, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=18]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 0, 100, 50, 50 )

[node name="ButtonContextBar" type="HBoxContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -846.0
margin_top = -50.0
margin_right = -16.0
grow_horizontal = 0
size_flags_horizontal = 9
size_flags_vertical = 9
custom_constants/separation = 10
alignment = 2
script = ExtResource( 1 )

[node name="CloseContextOption" parent="." instance=ExtResource( 7 )]
pc_button_texture = SubResource( 7 )
xbox_button_texture = SubResource( 8 )
playstation_button_texture = SubResource( 9 )

[node name="SubMenuContextOption" parent="." instance=ExtResource( 7 )]
margin_left = 105.0
margin_right = 200.0
pc_button_texture = SubResource( 25 )
xbox_button_texture = SubResource( 26 )
playstation_button_texture = SubResource( 27 )

[node name="RandomizeContextOption" parent="." instance=ExtResource( 7 )]
margin_left = 210.0
margin_right = 305.0
pc_button_texture = SubResource( 1 )
xbox_button_texture = SubResource( 2 )
playstation_button_texture = SubResource( 3 )

[node name="ResetContextOption" parent="." instance=ExtResource( 7 )]
margin_left = 315.0
margin_right = 410.0
pc_button_texture = SubResource( 4 )
xbox_button_texture = SubResource( 5 )
playstation_button_texture = SubResource( 6 )

[node name="LeftContextOption" parent="." instance=ExtResource( 7 )]
margin_left = 420.0
margin_right = 515.0
pc_button_texture = SubResource( 10 )
xbox_button_texture = SubResource( 11 )
playstation_button_texture = SubResource( 12 )

[node name="RightContextOption" parent="." instance=ExtResource( 7 )]
margin_left = 525.0
margin_right = 620.0
pc_button_texture = SubResource( 13 )
xbox_button_texture = SubResource( 14 )
playstation_button_texture = SubResource( 15 )

[node name="UpContextOption" parent="." instance=ExtResource( 7 )]
margin_left = 630.0
margin_right = 725.0
pc_button_texture = SubResource( 19 )
xbox_button_texture = SubResource( 20 )
playstation_button_texture = SubResource( 21 )

[node name="DownContextOption" parent="." instance=ExtResource( 7 )]
margin_left = 735.0
margin_right = 830.0
pc_button_texture = SubResource( 22 )
xbox_button_texture = SubResource( 23 )
playstation_button_texture = SubResource( 24 )

[node name="SelectContextOption" parent="." instance=ExtResource( 7 )]
margin_left = 840.0
margin_right = 935.0
pc_button_texture = SubResource( 16 )
xbox_button_texture = SubResource( 17 )
playstation_button_texture = SubResource( 18 )
